--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>winget install --id Git.Git -e --source winget
-    hello worlds 
-    <h2>hello width</h2>
+<body>
+    <div class="main">
+        <h2>Logo</h2>
+        <div class="nav">
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">store</a></li>
+                <li><a href="#">book</a></li>
+                <li><a href="#">about</a></li>
+            </ul>
+        </div>
+        
+    </div>
+   
 </body>
 </html>
