--- a/index.html
+++ b/index.html
@@ -4,17 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.7.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main">
-        <h2>Logo</h2>
         <div class="nav">
-            <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">store</a></li>
-                <li><a href="#">book</a></li>
-                <li><a href="#">about</a></li>
+            <h2>Logo</h2>
+            <div class="nav-part2">
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">store</a></li>
+                    <li><a href="#">book</a></li>
+                    <li><a href="#">about</a></li>
+                    <i class="ri-menu-fill"></i>
+                </div>
             </ul>
+        </div>
+        <div class="content">
+            <div class="left">
+                <h1>This is For all <span>Indian Student</span> to Lern Somthing New Daily</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum dolores nisi ipsum, ea assumenda cum earum odit natus perferendis tempore?</p>
+                <button>Explore Now</button>
+            </div>
+            <div class="right">
+                <img src="photo.png" alt="photo">
+            </div>
         </div>
         
     </div>
